correct relative paths and added celery start in auction.conf

--- a/celery_proj/auction.conf
+++ b/celery_proj/auction.conf
@@ -1,7 +1,16 @@
 [program:auction]
-command= /home/admin/venv/bin/gunicorn celery_proj.wsgi:application -c /home/admin/celery_proj/config/gunicorn.conf.py
-directory = home/admin/celery_proj
-user = true
-autorestart = true
-redirect_stderr = true
-stdout_logfile = /home/admin/celery_proj/logs/debug.log
+command=/home/admin/venv/bin/gunicorn celery_proj.wsgi:application -c /home/admin/auction/celery_proj/config/gunicorn.conf.py
+directory =/home/admin/auction/
+user=admin
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/home/admin/auction/celery_proj/logs/debug.log
+
+
+[program:celery_worker]
+directory = /home/admin/auction/
+command=/home/admin/venv/bin/celery -A celery_proj worker -B -l INFO
+user=admin
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/home/admin/auction/celery_proj/logs/celery.log
